--- a/Latex Document/Thesis.tex
+++ b/Latex Document/Thesis.tex
@@ -675,8 +675,8 @@ Ideally we would have data over the lifespan of a machine. The data we have righ
 One conclusion might be just to discard all the signals with constant values.
 These types of analysis can be expanded exponentially but one can only look at so much before moving on. It is also beneficial to, at least begin with, simple things like two variable linear regression.
 
-Since 2017 it is mandatory that all technical reports, theses, and similar publications, discuss Environmental Impact and Sustainability of the project. To find a starting point it is suggested to use “the United Nations’ 2030 Agenda for Sustainable Development” and its 17 Sustainable Development Goals. Under each goal there are some goal targets listed. Identify one or more goals relevant for your thesis, and comment using relevant goal targets.
-It should also be noted that the result and the methods used in this thesis are in good agreement with target 9.5 of the 2030 Agenda for sustainable development [52].
+%Enhance scientific research, upgrade the technological capabilities of industrial sectors in all countries, in particular developing countries, including, by 2030, encouraging innovation and substantially increasing the number of research and development workers per 1 million people and public and private research and development spending.
+The subject matter, methods and results used in this report are in good agreement with target 9.5 of the 2030 Agenda for sustainable development\cite{united2015department}. Hopefully this work will upgrade technology capabilities in industrial sectors and will assist workers in the field of research and development. 
 \clearpage
 
 \section{Conclusion}
